# ShieldCommit

./: .gitignore  BRANCHING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_PROCESS.md  QUICKSTART.md  README.md  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml  tests.yml
examples/: leaked_key.py
src/shieldcommit/: __main__.py  aks_detector.py  azure_db_detector.py  eks_detector.py  gcp_db_detector.py  gcp_detector.py  installer.py  intelligent_detector.py  rds_detector.py  scanner.py  utils.py
tests/: test_aks_detector.py  test_azure_db_detector.py  test_eks_detector.py  test_gcp_db_detector.py  test_gcp_detector.py  test_intelligent_detector.py  test_patterns.py  test_rds_detector.py  test_scanner.py
