[metadata]
name = shieldcommit
version = 1.0.0
description = Lightweight pre-commit secret scanner CLI with EKS/RDS version warnings
long_description = file: README_PYPI.md
long_description_content_type = text/markdown
author = TechiKrish
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click>=8.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=3.0
    flake8>=4.0
    black>=22.0
    isort>=5.0
    bandit>=1.7
    safety>=1.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
   shieldcommit = shieldcommit.__main__:cli

